Added index page to django mainapp

--- a/sudoku-django-project/mainapp/templates/mainapp/index.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML5>
-
+{% load static %}
 <html>
     <head>
         <title>Sudoku Web</title>
-        <link href="indexStyleSheet.css" rel="stylesheet" type="text/css">
+        <link href="{% static "mainapp/indexStyleSheet.css"%}" rel="stylesheet" type="text/css">
     </head>
     
     <body>
