--- a/sudoku-django-project/mainapp/templates/mainapp/index.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/index.html
@@ -10,9 +10,9 @@
         <hr class="hr-top">
         <h1>Sudoku Webapp</h1>
         <div class="buttons">
-            <input type="button" id="StartButton"><a href="#"></a>
-            <input type="button" id="LeaderBoardButton"><a href="#"></a>
-            <input type="button" id="AboutUsButton"><a href="#"></a>
+            <button id="StartButton">Start Button</button>
+            <button id="LeaderBoardButton">Leader Board</button>
+            <button id="AboutUsButton">About Us</button>
         </div>
         <hr class="hr-bottom">
     </body>
