--- a/sudoku-django-project/mainapp/static/mainapp/indexStyleSheet.css
+++ b/sudoku-django-project/mainapp/static/mainapp/indexStyleSheet.css
@@ -41,14 +41,31 @@ h1{
 
 #StartButton{
     grid-area: start;
-    font-size: 0%;
+    font-size: 100%;
     position: relative;
+    background-color: darkgreen;
+    color: whitesmoke;
     overflow: hidden;
+}
+#StartButton::after{
+    content: "";
+    position: absolute;
+    background-color: rgb(240,240,240);
+    top: -10;
+    left: 0;
+    z-index: 1;
+    height: 130%;
+    width: 100%;
+}
+
+#StartButton:hover::after{
+    transition-duration: 0.60s;
+    height: 0%;
+
 }
 
 #LeaderBoardButton{
     grid-area: leaderboard;
-    font-size: 100%;
     color: whitesmoke;
     background-color: darkgreen;
     position: relative;
@@ -61,21 +78,38 @@ h1{
     left: 0px;
     top: 0px;
     z-index: 1;
-    width: 100%;
-    height: 100%;
+    width: 300%;
+    height: 300%;
+    top: -70px;
+    left: -70px;
+    transform: rotate(-45deg);
 }
 #LeaderBoardButton:hover::after{
-    transition-duration: 0.5s;
+    transition-duration: 0.75s;
     height: 0%;
-    width: 0%;
 }
 
 #AboutUsButton{
     grid-area: aboutus;
-    font-size: 0%;
-}
-#AboutUsButton:hover{
+    color: whitesmoke;
+    position: relative;
     background-color: darkgreen;
-    font-size: 100%;
-    color: whitesmoke
+    overflow: hidden;
+}
+#AboutUsButton::after{
+    content:"";
+    position: absolute;
+    background-color: rgb(240,240,240);
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+    width: 300%;
+    height: 300%;
+    top: -70px;
+    left: -70px;
+    transform: rotate(45deg);
+}
+#AboutUsButton:hover::after{
+    transition-duration: 0.75s;
+    height: 0%;
 }
