Added different animation for start button
There are 2 button animations that I think would look good here. I've put the pressing animation for the start button and the sliding animation for the other two.
If you want to check the sliding animation for the start button check the previous commit.
Also tell me which animation I should apply for all the buttons. Im in the favour of the pressing kind

--- a/sudoku-django-project/mainapp/static/mainapp/indexStyleSheet.css
+++ b/sudoku-django-project/mainapp/static/mainapp/indexStyleSheet.css
@@ -45,8 +45,19 @@ h1{
     position: relative;
     background-color: darkgreen;
     color: whitesmoke;
-    overflow: hidden;
 }
+#StartButton::before{
+    content: "";
+    position: absolute;
+    background-color: grey;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+
+}
+/*
 #StartButton::after{
     content: "";
     position: absolute;
@@ -56,14 +67,25 @@ h1{
     z-index: 1;
     height: 130%;
     width: 100%;
+}*/
+#StartButton:hover{
+    bottom: 10px;
 }
-
+#StartButton:hover::before{
+    top: 10;
+}
+/*
 #StartButton:hover::after{
     transition-duration: 0.60s;
     height: 0%;
+}*/
 
+#StartButton:active{
+    bottom: 0px;
 }
-
+#StartButton:active::before{
+    top: 0;
+}
 #LeaderBoardButton{
     grid-area: leaderboard;
     color: whitesmoke;
