Finally put the font on

--- a/sudoku-django-project/mainapp/static/mainapp/tailwind-output.css
+++ b/sudoku-django-project/mainapp/static/mainapp/tailwind-output.css
@@ -586,6 +586,16 @@ video {
   height: auto;
 }
 
+@font-face{
+  font-family: 'futurist';
+
+  src: url(../fonts/FUTRFW.TTF) format('truetype');
+}
+
+.mainfont{
+  font-family: futurist;
+}
+
 .container {
   width: 100%;
 }
