--- a/sudoku-django-project/mainapp/templates/mainapp/index.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE HTML5>
+{% load static %}
+
 <html>
     <head>
         <title>Sudoku Web</title>
         <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
     </head>
-    <body>
-
+    <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
+        <h2 class="mainfont"> Sudoku </h2>
     </body>
 </html>
