--- a/sudoku-django-project/mainapp/templates/mainapp/index.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/index.html
@@ -7,6 +7,11 @@
         <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
     </head>
     <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
-        <h2 class="mainfont"> Sudoku </h2>
+        <h2 class="mainfont text-6xl text-center text-white pt-40"> Sudoku </h2>
+        
+        <div class="flex flex-col items-center pt-16">
+            <a href="#" class="text-5xl bg-gray-300 pl-4 pb-1 pr-4 rounded-xl">Start Game</a>
+            <a href="#" class="text-2xl bg-gray-300 pl-4 pr-4 pt-1 pb-1 mt-6 rounded-xl">Leader Board</a>
+        </div>
     </body>
 </html>
