--- a/sudoku-django-project/mainapp/templates/mainapp/index.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/index.html
@@ -10,8 +10,8 @@
         <h2 class="mainfont text-6xl text-center text-white pt-40"> Sudoku </h2>
         
         <div class="flex flex-col items-center pt-16">
-            <a href="#" class="text-5xl bg-gray-300 pl-4 pb-1 pr-4 rounded-xl">Start Game</a>
-            <a href="#" class="text-2xl bg-gray-300 pl-4 pr-4 pt-1 pb-1 mt-6 rounded-xl">Leader Board</a>
+            <a href="#" class="transform text-5xl bg-gray-300 active:bg-gray-500 pl-4 pb-1 pr-4 rounded-xl hover:scale-105">Start Game</a>
+            <a href="#" class="transform text-2xl bg-gray-300 active:bg-gray-500 pl-4 pr-4 pt-1 pb-1 mt-6 rounded-xl hover:scale-105">Leader Board</a>
         </div>
     </body>
 </html>
