Set up purge css, made sudoku board

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -7,6 +7,107 @@
         <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
     </head>
     <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
-
+        <div class="grid float-left grid grid-rows-3 grid-cols-3 gap-2 w-1/2 ml-20 mt-16 border-transparent blue-700 border-8 shadow-2xl">
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+        </div>
+        
     </body>
 </html>
