Made basic stats+timer box, centered input for sudoku

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -9,105 +9,115 @@
     <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
         <div class="grid float-left grid grid-rows-3 grid-cols-3 gap-2 w-1/2 ml-20 mt-16 border-transparent blue-700 border-8 shadow-2xl">
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-40">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
+                <input class="text-3xl text-center" type="text">
             </div>
         </div>
-        
+        <div class="float-right border-white border-4 w-rem20 h-rem21 mr-32 mt-32">
+            <div class="m-4 border-white border-2 h-56">
+                <h5 class="text-2xl text-center underline">NAME</h5>
+                <button class="relative py-1 px-4 mx-20 text-2xl border-white bg-red-200 border-2">Submit</button>
+            </div>
+            
+            <div class="grid grid-cols-2 gap-2 m-4 mt-4 border-2">
+                <a href="#" class="py-2 text-center text-1xl border-white border-2">Home</a>
+                <a href="#" class="py-2 text-center text-1xl border-white border-2">LeaderBoard</a>
+            </div>
+        </div>
     </body>
 </html>
