--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -111,7 +111,8 @@
         <div class="float-right border-white border-4 w-rem20 h-rem21 mr-32 mt-32">
             <div class="m-4 border-white border-2 h-56">
                 <h5 class="text-2xl text-center underline">NAME</h5>
-                <button class="relative py-1 px-4 mx-20 text-2xl border-white bg-red-200 border-2 focus:outline-none">Submit</button>
+                <h5 class="text-2xl text-center mt-5">Time elapsed: <br> 5min 20s</h5>
+                <button class="relative py-1 px-4 mx-20 mt-5 text-2xl border-white bg-red-200 border-2 focus:outline-none">Submit</button>
             </div>
             
             <div class="grid grid-cols-2 gap-2 m-4 mt-4 border-2">
