--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -108,16 +108,16 @@
                 <input class="text-3xl text-center subfont-cumono focus:bg-blue-200 focus:outline-none" maxlength="1" type="text">
             </div>
         </div>
-        <div class="float-right border-white border-4 w-rem20 h-rem21 mr-32 mt-32">
-            <div class="m-4 border-white border-2 h-56">
-                <h5 class="text-2xl text-center subfont-cumono font-bold">NAME</h5>
+        <div class="float-right bg-gray-300 rounded-xl shadow-2xl border-4 w-rem20 h-rem21 mr-32 mt-32">
+            <div class="rounded-lg shadow-md m-4 bg-gray-100 border-2 h-56">
+                <h5 class="rounded-lg shadow-md text-2xl text-center subfont-cumono font-bold">NAME</h5>
                 <h5 class="text-2xl text-center mt-5 subfont-cumono">Time elapsed: <br> 5min 20s</h5>
-                <button class="relative py-1 px-4 mx-20 mt-5 text-2xl border-white bg-red-200 border-2 focus:outline-none subfont-cumono">Submit</button>
+                <button class="rounded-lg shadow-md py-1 px-4 mx-20 mt-5 text-2xl border-red-500 hover:border-white hover:bg-red-500 hover:text-white active:bg-red-700 border-2 focus:outline-none subfont-cumono">Submit</button>
             </div>
             
-            <div class="grid grid-cols-2 gap-2 m-4 mt-4 border-2">
-                <a href="#" class="py-2 text-center text-1xl border-white border-2 subfont-ubmono">Home</a>
-                <a href="#" class="py-2 text-center text-1xl border-white border-2 subfont-ubmono">LeaderBoard</a>
+            <div class="bg-gray-200 grid grid-cols-2 gap-2 m-4 mt-4 border-2">
+                <a href="#" class="shadow-md rounded-lg py-2 text-center text-1xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 subfont-ubmono">Home</a>
+                <a href="#" class="shadow-md rounded-lg py-2 text-center text-1xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 subfont-ubmono">LeaderBoard</a>
             </div>
         </div>
     </body>
