Fixed the Page reset issue

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -107,7 +107,7 @@
                 <input class="text-3xl text-center subfont-cumono focus:bg-blue-200 focus:outline-none" maxlength="1" type="text">
                 <input class="text-3xl text-center subfont-cumono focus:bg-blue-200 focus:outline-none" maxlength="1" type="text">
             </div>
-
+        </div>
         <div class="float-right bg-gray-300 rounded-xl shadow-2xl border-4 w-rem20 h-rem21 mr-32 mt-32">
             <div class="rounded-lg shadow-md m-4 bg-gray-100 border-2 h-56">
                 <h5 class="rounded-lg shadow-md text-2xl text-center subfont-cumono font-bold">NAME</h5>
