Started work on name asking before game starting thing

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -6,7 +6,12 @@
         <title>Game</title>
         <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
     </head>
+
     <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
+
+        <div class="absolute bg-black opacity-75 w-screen h-screen">
+        </div>
+
         <div class="grid float-left grid grid-rows-3 grid-cols-3 gap-2 w-1/2 ml-20 mt-2 border-transparent blue-700 border-8 shadow-2xl">
             <div class="grid grid-rows-3 grid-cols-3 gap-1 h-48">
                 <input class="text-3xl text-center subfont-cumono focus:bg-blue-200 focus:outline-none" maxlength="1" type="text">
@@ -122,3 +127,9 @@
     
     </body>
 </html>
+
+<script>
+    
+
+
+</script>
