--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -9,7 +9,14 @@
 
     <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
 
-        <div class="absolute bg-black opacity-75 w-screen h-screen">
+        <div id="name-getter-layout" class="absolute bg-black bg-opacity-75 w-screen h-screen">
+            <div class="grid grid-rows-2 gap-5 rounded-md border-white border-2 bg-gray-300 text-black w-1/4 m-auto mt-56 animate-fall">
+                <h4 class="text-center text-3xl subfont-cumono font-bold">Enter your Name:</h4>
+
+                <input id="name-getter" type="text" maxlength="10" placeholder="Enter Name" class="border-blue-800 border-4 focus:outline-none align-middle text-black text-2xl text-center subfont-cumono rounded-md">
+
+                <button id="name-getter-button" onclick="clickhandle()" class="rounded-lg shadow-md px-4 mx-20 text-2xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 focus:outline-none subfont-cumono">Enter</button>
+            </div>
         </div>
 
         <div class="grid float-left grid grid-rows-3 grid-cols-3 gap-2 w-1/2 ml-20 mt-2 border-transparent blue-700 border-8 shadow-2xl">
@@ -129,7 +136,15 @@
 </html>
 
 <script>
-    
+    var name_text_holder = document.getElementById('name-getter')
+    var name_text_button = document.getElementById('name-getter-button')
+    var name_getter_layout = document.getElementById('name-getter-layout')
+ 
+    function clickhandle(){
+        alert("button was clicked")
+    }
 
+
+    
 
 </script>
