Changing name on getting the name done, working on timer

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -122,8 +122,8 @@
         </div>
         <div class="float-right bg-gray-300 rounded-xl shadow-2xl border-4 w-rem20 h-rem21 mr-32 mt-32">
             <div class="rounded-lg shadow-md m-4 bg-gray-100 border-2 h-56">
-                <h5 class="rounded-lg shadow-md text-2xl text-center subfont-cumono font-bold">NAME</h5>
-                <h5 class="text-2xl text-center mt-5 subfont-cumono">Time elapsed: <br> 5min 20s</h5>
+                <h5 id="Name-headline" class="rounded-lg shadow-md text-2xl text-center subfont-cumono font-bold">NAME</h5>
+                <h5 class="text-2xl text-center mt-5 subfont-cumono">Time elapsed: <br> 0min 00s</h5>
                 <button class="rounded-lg shadow-md py-1 px-4 mx-20 mt-5 text-2xl border-red-500 hover:border-white hover:bg-red-500 hover:text-white active:bg-red-700 border-2 focus:outline-none subfont-cumono">Submit</button>
             </div>
             <div class="bg-gray-200 grid grid-cols-2 gap-2 m-4 mt-4 border-2">
@@ -139,10 +139,20 @@
     var name_text_holder = document.getElementById('name-getter')
     var name_text_button = document.getElementById('name-getter-button')
     var name_getter_layout = document.getElementById('name-getter-layout')
+
+    var name
  
-    function clickhandle(){
-        alert("button was clicked")
+    function replace_name(name){
+        document.getElementById("Name-headline").innerText = name
     }
+
+    function clickhandle(){
+        name = name_text_holder.value
+        name_getter_layout.remove()
+        replace_name(name)
+    }
+
+    
 
 
     
